chore: Added Spotless checks to compile stage